--- a/index.html
+++ b/index.html
@@ -2,8 +2,53 @@
 <html>
 <head>
 	<title>oi</title>
+	<meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <script src="js/main.js"></script>
 </head>
 <body>
+
+	<div class="container">
+		<div class="logo">
+			
+
+		</div>
+		<div class="primeiro_menu">
+			
+		</div>
+		<div class=" redes_links">
+			
+		</div>
+	</div>
+	<div class="limpa"></div>
+	<div class="container">
+		<div class="sub_menu">
+
+			
+		</div>
+		<div class="login">
+			
+		</div>
+	</div>
+	<div class="limpa"></div>
+	<div class="container">
+		<div class="banner">
+			
+		</div>
+	</div>
+	<div class="container">
+		<div class="banner2">
+			
+		</div>
+	</div>
+	<div class="limpa"></div>
+	<div class="container">
+		<div class="banner3">
+			
+		</div>
+	</div>
 
 </body>
 </html>
