--- a/index.html
+++ b/index.html
@@ -12,43 +12,76 @@
 
 	<div class="container">
 		<div class="logo">
-			
-
+			<img src="img/logo.png">
 		</div>
-		<div class="primeiro_menu">
-			
-		</div>
-		<div class=" redes_links">
-			
+		<div class="primeiro_menu">		
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Onde Utilizar</a></li>
+					<li><a href="#">Perguntas Frequentes</a></li>
+					<li><a href="#">Contato</a></li>		
+					<li><a href="#"> <img src="img/ico_facebook.png">  </a></li>	
+					<li><a href="#"> <img src="img/ico_instagram.png">  </a></li>
+				</ul>			
 		</div>
 	</div>
 	<div class="limpa"></div>
 	<div class="container">
 		<div class="sub_menu">
-
-			
-		</div>
-		<div class="login">
-			
+			<div class="menucentral">
+				<ul>
+					<li><a href="#">Para você</a></li>
+					<li><a href="#">Para os estabelecimentos</a></li>
+					<li><a href="#">Para os desenvolvedores</a></li>	
+					<li><a href="#"> <img src="img/ico_cadeado.png">  </a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="limpa"></div>
 	<div class="container">
 		<div class="banner">
-			
-		</div>
-	</div>
-	<div class="container">
-		<div class="banner2">
-			
+			<a href="#"><img src="img/temp/1.png"></a>
 		</div>
 	</div>
 	<div class="limpa"></div>
 	<div class="container">
-		<div class="banner3">
-			
+		<div class="banner2">
+			<a href="#"><img src="img/bg_vantagens.jpg"></a>
 		</div>
 	</div>
 
+	<div class="limpa"></div>
+	<div class="container">
+		<div class="banner3">
+			<a href="#"><img src="img/bg_vantagens2.jpg"></a>
+		</div>
+	</div>
+	<div class="limpa"></div>
+	<div class="rodape">
+		<div class="quem_somos">
+			<h2>Somos Fast2Pay</h2>
+			<p>
+				Com o Fast2Pay você paga sua conta sem sair do lugar, sem perder tempo enfrentando filas e sem solicitar a conta a ninguém. Você recebe a cobrança no celular!
+			</p>
+			<a href="#"><img src="img/startucs.png"></a>
+			<a href="#"><img src="img/ucs.png"></a>
+		</div>
+		<div class="baixe_agora">
+			<a href="#"> <h2>Baixe Agora</h2></a>
+			<a href="#"> <img src="img/appstore.png"></a>
+			<a href="#"> <img src="img/googleplay.png"></a>
+		</div>
+		<div class="primeiro_menu">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Onde Utilizar</a></li>
+				<li><a href="#">Perguntas Frequentes</a></li>
+				<li><a href="#">Contato</a></li>		
+				<li><a href="#"> <img src="">  </a></li>	
+				<li><a href="#"> <img src="">  </a></li>
+			</ul>
+		</div>
+	</div>
 </body>
 </html>
